--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ fabric.properties
 .idea/kotlinc.xml
 .idea/misc.xml
 .idea/codeStyles/codeStyleConfig.xml
+src/main/resources/META-INF/MANIFEST.MF
