add a simple implementation to read aloud texts

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DB_USER="username for database"
 DB_PASSWORD="password for database"
 DB_URL="url of database"
 DB_DRIVER="driver for jdbc"
+OPEN_JTALK="path to open_jtalk executable"
+OPEN_JTALK_HTS_VOICE="path to htsvoice file"
+OPEN_JTALK_DICTIONARY="path to dictionary file for open_jtalk"
