--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -1,3 +1,48 @@
 fun_temp_channel_msg_welcome_title=プライベートチャンネルへようこそ！
 fun_temp_channel_msg_welcome_desc=このチャンネルは、ボイスチャンネル{0}に紐づくプライベートテキストチャンネルです。このボイスチャンネル内のユーザ及び管理者など全チャンネルの閲覧権限を持つユーザを除き、このチャンネルを閲覧することはできません。また、このテキストチャンネルはボイスチャンネル内のメンバーが0人になった瞬間に自動で削除されます。
 
+discord_text_channel_expression=<#{0}>
+discord_voice_channel_expression={0}
+discord_member_expression=<@{0}>
+
+read_channel_registered_successfully=読み上げ機能の設定完了
+read_channel_configuration_exist=この機能は既に他のユーザに使われています。
+read_channel_configuration_failed=Failed to register configuration.
+unsubscribe_read=読み上げ機能を停止しました。
+no_configuration=読み上げ設定がありません。
+error=Oops, there is something wrong with the command.
+
+# コマンド系のリソースの命名規則
+#   cmd_{commandName}_* -> コマンド関連
+#   cmd_{commandName}_{subCommandName}_* -> サブコマンド関連
+#   desc -> description（説明文）
+#   msg -> メッセージ用
+
+# readコマンド関連
+cmd_read_desc=テキストチャンネル内のメッセージを読み上げます。
+cmd_read_s_desc=読み上げを開始します。
+cmd_read_e_desc=読み上げを終了します。
+cmd_read_h_desc=読み上げコマンドの利用方法を表示します。
+cmd_read_status_desc=読み上げコマンドの利用状況を確認します。
+cmd_read_h_msg_title=readコマンドの利用方法
+cmd_read_h_msg_desc=readコマンドは、特定のテキストチャンネル内の書き込みを音声で読み上げる機能です。
+cmd_read_h_msg_field1_title=コマンドの利用条件
+cmd_read_h_msg_field1_value=- 自身がボイスチャンネルに入っていること\n- 本機能が他ユーザーに利用されていないこと
+cmd_read_h_msg_field2_title=読み上げの開始
+cmd_read_h_msg_field2_value=ボイスチャンネル内に入った状態で、読み上げ対象となるテキストチャンネルでサブコマンド`s`を実行します。
+cmd_read_h_msg_field3_title=読み上げの終了
+cmd_read_h_msg_field3_value=ボイスチャンネルに入った状態で、任意のテキストチャンネルでサブコマンド`e`を実行します。
+cmd_read_h_msg_field4_title=オーナー権限
+cmd_read_h_msg_field4_value=読み上げ機能を設定したユーザを**オーナー**と言います。読み上げ機能の実行中、オーナー以外のユーザは関連コマンドを利用することができません。しかし、オーナーがボイスチャンネルから抜けた場合、オーナーの権限は消滅しそのボイスチャンネル内のユーザー全員がボットコマンドを呼び出すことができるようになります。
+cmd_read_h_msg_field5_title=ボットの自動退室
+cmd_read_h_msg_field5_value=読み上げを行っているボイスチャンネル内にユーザーが誰もいなくなった場合、ボットは自動で退室し読み上げ設定を解除します。
+cmd_read_s_msg_registered_title=読み上げ設定完了
+cmd_read_s_msg_registered_field1_title=読み上げ対象テキストチャンネル
+cmd_read_s_msg_registered_field2_title=読み上げ実施ボイスチャンネル
+cmd_read_s_msg_registered_field3_title=オーナー
+cmd_read_status_msg_title=読み上げ機能のステータス
+cmd_read_status_msg_used_field1_title=読み上げ対象テキストチャンネル
+cmd_read_status_msg_used_field2_title=読み上げ実施ボイスチャンネル
+cmd_read_status_msg_used_field3_title=オーナー
+cmd_read_status_msg_used_desc=現在読み上げ機能を利用中のユーザがいます。
+cmd_read_status_msg_not_used_desc=現在読み上げ機能を使用中のユーザはいません。
