--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -21,5 +21,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Rename env file
+        run: mv .env.example .env
+
       - name: Build with Gradle
         run: ./gradlew build test
