add missing variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DB_DRIVER="driver for jdbc"
 OPEN_JTALK="path to open_jtalk executable"
 OPEN_JTALK_HTS_VOICE="path to htsvoice file"
 OPEN_JTALK_DICTIONARY="path to dictionary file for open_jtalk"
+GPT4ALL_MODEL_PATH="path to gpt4all model"
+VOICEVOX_SERVER_URL="url of voicevox server"
